--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="login">Login</string>
+    <string name="registration">registration</string>
+    <string name="enter_login">Enter login</string>
+    <string name="enter_password">Enter password</string>
+    <string name="success">Success</string>
+    <string name="authentication_failed">Authentication failed</string>
+    <string name="registration_failed">Registration failed</string>
+    <string name="repeat_password">Repeat password</string>
+    <string name="please_wait">Please wait....</string>
+    <string name="authentication">Authentication</string>
+    <string name="invalid_login">Login has wrong format</string>
+    <string name="invalid_password">Password is too simple</string>
+    <string name="diff_passwords">Password aren\'t the same</string>
 </resources>
