--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,18 +3,19 @@
     <string name="app_name">My Application</string>
     <string name="network_error">Check your internet connection</string>
     <string name="login">login</string>
-    <string name="registration">registration</string>
+    <string name="registration">Registration</string>
     <string name="enter_login">Enter login</string>
     <string name="enter_password">Enter password</string>
     <string name="repeat_password">Repeat password</string>
     <string name="success">Success</string>
     <string name="authentication_failed">Authentication failed</string>
+    <string name="authorization_failed">Authorization failed</string>
     <string name="registration_failed">Registration failed</string>
     <string name="please_wait">Please wait....</string>
     <string name="authentication">Authentication</string>
     <string name="invalid_login">Incorrect login\nLength should be 5 till 10 characters. Allow only english characters, numbers, dot or underscore</string>
     <string name="invalid_password">Password is too simple\nLength should be 6 or more characters\nShould be at least one capital letter\nAllow only english characters and numbers</string>
-    <string name="diff_passwords">Password aren\'t the same</string>
+    <string name="diff_passwords">Passwords aren\'t the same</string>
     <string name="empty_password">Enter a password</string>
     <string name="commercial_record">advertisement</string>
 </resources>
